--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Google Homepage Clone</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -18,21 +18,43 @@
   </head>
   <body>
     <nav>
-      <li>Gmail</li>
-      <li>Images</li>
-      <li>
-        <a
-          id="none"
-          href="https://www.google.com/intl/en/about/products?tab=wh"
-          title="apps"
-          class="material-icons"
-          >apps</a
-        >
-      </li>
-      <li>
-        <button class="sign-button">Sign In</button>
-      </li>
+      <div class="top-bar">
+        <li>Gmail</li>
+        <li>Images</li>
+        <li>
+          <a
+            id="none"
+            href="https://www.google.com/intl/en/about/products?tab=wh"
+            title="apps"
+            class="material-icons"
+            >apps</a
+          >
+        </li>
+        <li>
+          <div class="sign-button">Sign In</div>
+        </li>
+      </div>
     </nav>
+
+    <div class="center">
+      <img
+        alt="Google"
+        height="92"
+        id="hplogo"
+        src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+        style="padding-top: 109px"
+        width="272"
+        data-atf="1"
+        class=""
+      />
+
+      
+    </div>
+    <div class="center input-box">
+      <input type="search" name="" id="">
+        <i><img class="mic-mic" src="https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" alt="searchs"></i>
+    </div>
+      
 
     <script src="" async defer></script>
   </body>
