--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       <input type="search" name="" id="">
         <i><img class="mic-mic" src="https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" alt="searchs"></i>
     </div>
+
+    <div class="center search-buttons">
+      <button>Google Search</button>
+      <button>I´m Feeling Lucky </button>
+    </div>
       
 
     <script src="" async defer></script>
